welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:27: error: identifier expected but 'override' found.
def override run() {
    ^