welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
def faireV {
  var nbPas=0
  for (i<-1 to 2) {
    avance
  }
  baisseBrosse
  gauche;
  leveBrosse
  avance;
  droite;
  avance;
  baisseBrosse;
  droite;
  leveBrosse;
  avance;
  gauche;
  avance;
  baisseBrosse;
  nbPas=0;
  leveBrosse;
  for (i<-1 to 2) {
    avance
  }
  gauche
}

def override run() {
  for (n <- 1 to 4) {
    faireV;
  }
}

def faire3v() {
  for (i<- 1 to 2) {
    run;
    for (j<- 1 to 7) {
      avance
    }
  }
  run;
  for (u<- 1 to 6) {
    avance;
  }
  gauche
}

def faireMotif {
  for (i<- 1 to 4) {
    faire3v;
  }
}

